--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlogrus">mozlogrus</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
         </ul>
