--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     </p>
     <p>
         <ul>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlogrus">mozlogrus</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
         </ul>
     </p>
     <br /><br />
