--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/userplex">userplex</a></li>
         </ul>
     </p>
     <br /><br />
