--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlogrus">mozlogrus</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
