--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/tigerblood">tigerblood</a></li>
             <li>go get mig.ninja/<a href="https://github.com/mozilla/mig">mig</a></li>
         </ul>
     </p>
