--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/github-perm-auditor">github-perm-auditor</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
