--- a/sops/pgp/index.html
+++ b/sops/pgp/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="go-import" content="go.mozilla.org/sops git https://github.com/jvehent/sops">
+    <meta name="go-import" content="go.mozilla.org/sops git https://github.com/mozilla/sops">
   </head>
   <body>
     <h1>go.mozilla.org/sops</h1>
+    <h2>Install with: go get -u go.mozilla.org/sops/cmd/sops</h2>
     <p>godoc: <a href="https://godoc.org/go.mozilla.org/sops">godoc.org/go.mozilla.org/sops</a></p>
-    <p>source: <a href="https://github.com/mozilla/sops/tree/go-sops">github.com/mozilla/sops/tree/go-sops</a></p>
+    <p>source: <a href="https://github.com/mozilla/sops">github.com/mozilla/sops</a></p>
   </body>
 </html>
