--- a/notfound.html
+++ b/notfound.html
@@ -7,7 +7,7 @@
   <body>
     <h1>The page you requested could not be found....</h1>
     <p>
-        <img src="statics/gopher.png" width=300 /> <span style="font-size:200px;">+</span> <img src="statics/firefox.png" width=400 /> <span style="font-size:200px;"> = </span><span style="font-size:100px;">go.mozilla.org </span>
+        <img src="/statics/gopher.png" width=300 /> <span style="font-size:200px;">+</span> <img src="/statics/firefox.png" width=400 /> <span style="font-size:200px;"> = </span><span style="font-size:100px;">go.mozilla.org </span>
     </p>
   </body>
 </html>
