--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         <ul>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cose">cose</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlogrus">mozlogrus</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/pkcs7">pkcs7</a></li>
             <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/tigerblood">tigerblood</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
             <li>go get mig.ninja/<a href="https://github.com/mozilla/mig">mig</a></li>
         </ul>
     </p>
