--- a/cose/index.html
+++ b/cose/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="go-import" content="go.mozilla.org/cose git https://github.com/mozilla-services/cose">
+    <meta name="go-import" content="go.mozilla.org/cose git https://github.com/mozilla-services/go-cose">
   </head>
   <body>
     <h1>go.mozilla.org/cose</h1>
-    <p>godoc: <a href="https://godoc.org/go.mozilla.org/cose">godoc.org/go.mozilla.org/cose</a></p>
-    <p>source: <a href="https://github.com/mozilla-services/cose/">github.com/mozilla/cose</a></p>
+    <p>godoc: <a href="https://godoc.org/go.mozilla.org/go-cose">godoc.org/go.mozilla.org/go-cose</a></p>
+    <p>source: <a href="https://github.com/mozilla-services/go-cose/">github.com/mozilla/go-cose</a></p>
   </body>
 </html>
