Add iprepd, fix home

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     </p>
     <p>
         <ul>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/autograph">autograph</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/cose">cose</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-bouncer">bouncer</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlog">mozlog</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/go-mozlogrus">mozlogrus</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/gopgagent">gopgagent</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/hawk-go">hawk</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/mozldap">mozldap</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/pkcs7">pkcs7</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/tigerblood">tigerblood</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla-services/userplex">userplex</a></li>
-            <li>go get go.mozilla.org/<a href="https://github.com/mozilla/sops">sops</a></li>
-            <li>go get mig.ninja/<a href="https://github.com/mozilla/mig">mig</a></li>
+            <li>go get go.mozilla.org/<a href="/autograph">autograph</a></li>
+            <li>go get go.mozilla.org/<a href="/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
+            <li>go get go.mozilla.org/<a href="/cose">cose</a></li>
+            <li>go get go.mozilla.org/<a href="/bouncer">bouncer</a></li>
+            <li>go get go.mozilla.org/<a href="/mozlog">mozlog</a></li>
+            <li>go get go.mozilla.org/<a href="/mozlogrus">mozlogrus</a></li>
+            <li>go get go.mozilla.org/<a href="/gopgagent">gopgagent</a></li>
+            <li>go get go.mozilla.org/<a href="/hawk">hawk</a></li>
+            <li>go get go.mozilla.org/<a href="/mozldap">mozldap</a></li>
+            <li>go get go.mozilla.org/<a href="/pkcs7">pkcs7</a></li>
+            <li>go get go.mozilla.org/<a href="/iprepd">iprepd</a></li>
+            <li>go get go.mozilla.org/<a href="/mar">mar</a></li>
+            <li>go get go.mozilla.org/<a href="/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="/sops">sops</a></li>
         </ul>
     </p>
     <br /><br />
