--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>go get go.mozilla.org/<a href="/autograph">autograph</a></li>
             <li>go get go.mozilla.org/<a href="/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
             <li>go get go.mozilla.org/<a href="/cose">cose</a></li>
+            <li>go get go.mozilla.org/<a href="/cloudtrail-streamer">cloudtrail-streamer</a></li>
             <li>go get go.mozilla.org/<a href="/bouncer">bouncer</a></li>
             <li>go get go.mozilla.org/<a href="/mozlog">mozlog</a></li>
             <li>go get go.mozilla.org/<a href="/mozlogrus">mozlogrus</a></li>
