Add person-api and foxsec-pipeline-contrib

--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
     <p>
         <ul>
             <li>go get go.mozilla.org/<a href="/autograph">autograph</a></li>
-            <li>go get go.mozilla.org/<a href="/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
-            <li>go get go.mozilla.org/<a href="/cose">cose</a></li>
-            <li>go get go.mozilla.org/<a href="/cloudtrail-streamer">cloudtrail-streamer</a></li>
             <li>go get go.mozilla.org/<a href="/bouncer">bouncer</a></li>
-            <li>go get go.mozilla.org/<a href="/mozlog">mozlog</a></li>
-            <li>go get go.mozilla.org/<a href="/mozlogrus">mozlogrus</a></li>
+            <li>go get go.mozilla.org/<a href="/cloudops-deployment-proxy">cloudops-deployment-proxy</a></li>
+            <li>go get go.mozilla.org/<a href="/cloudtrail-streamer">cloudtrail-streamer</a></li>
+            <li>go get go.mozilla.org/<a href="/cose">cose</a></li>
+            <li>go get go.mozilla.org/<a href="/foxsec-pipeline-contrib">foxsec-pipeline-contrib</a></li>
             <li>go get go.mozilla.org/<a href="/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="/hawk">hawk</a></li>
-            <li>go get go.mozilla.org/<a href="/mozldap">mozldap</a></li>
-            <li>go get go.mozilla.org/<a href="/pkcs7">pkcs7</a></li>
             <li>go get go.mozilla.org/<a href="/iprepd">iprepd</a></li>
             <li>go get go.mozilla.org/<a href="/mar">mar</a></li>
-            <li>go get go.mozilla.org/<a href="/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="/mozldap">mozldap</a></li>
+            <li>go get go.mozilla.org/<a href="/mozlog">mozlog</a></li>
+            <li>go get go.mozilla.org/<a href="/mozlogrus">mozlogrus</a></li>
+            <li>go get go.mozilla.org/<a href="/person-api">person-api</a></li>
+            <li>go get go.mozilla.org/<a href="/pkcs7">pkcs7</a></li>
             <li>go get go.mozilla.org/<a href="/sops">sops</a></li>
+            <li>go get go.mozilla.org/<a href="/userplex">userplex</a></li>
         </ul>
     </p>
     <br /><br />
