--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>go get go.mozilla.org/<a href="/foxsec-pipeline-contrib">foxsec-pipeline-contrib</a></li>
             <li>go get go.mozilla.org/<a href="/gopgagent">gopgagent</a></li>
             <li>go get go.mozilla.org/<a href="/hawk">hawk</a></li>
-            <li>go get go.mozilla.org/<a href="/iprepd">iprepd</a></li>
+            <li>go get go.mozilla.org/<a href="/repd">repd</a></li>
             <li>go get go.mozilla.org/<a href="/mar">mar</a></li>
             <li>go get go.mozilla.org/<a href="/mozldap">mozldap</a></li>
             <li>go get go.mozilla.org/<a href="/mozlog">mozlog</a></li>
