Add new /v3 path for sops

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>go get go.mozilla.org/<a href="/mozlogrus">mozlogrus</a></li>
             <li>go get go.mozilla.org/<a href="/person-api">person-api</a></li>
             <li>go get go.mozilla.org/<a href="/pkcs7">pkcs7</a></li>
-            <li>go get go.mozilla.org/<a href="/sops">sops</a></li>
+            <li>go get go.mozilla.org/<a href="/sops/v3">sops/v3</a></li>
             <li>go get go.mozilla.org/<a href="/userplex">userplex</a></li>
         </ul>
     </p>
