--- a/sops/v3/index.html
+++ b/sops/v3/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="go-import" content="go.mozilla.org/sops/v3 git https://github.com/mozilla/sops/v3">
+    <meta name="go-import" content="go.mozilla.org/sops/v3 git https://github.com/mozilla/sops">
   </head>
   <body>
     <h1>go.mozilla.org/sops/v3</h1>
