--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li>go get go.mozilla.org/<a href="/pkcs7">pkcs7</a></li>
             <li>go get go.mozilla.org/<a href="/sops/v3">sops/v3</a></li>
             <li>go get go.mozilla.org/<a href="/userplex">userplex</a></li>
+            <li>go get go.mozilla.org/<a href="/renard">renard</a></li>
         </ul>
     </p>
     <br /><br />
