--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <p>
         <img src="statics/gopher.png" width=300 /> <span style="font-size:200px;">+</span> <img src="statics/firefox.png" width=400 /> <span style="font-size:200px;"> = </span><span style="font-size:100px;">go.mozilla.org </span>
     </p>
+    <h1>Use of this index is deprecated!</h1>
+    <p>
+      A number of the packages listed below are now from archived repositories. Some of the projects have even been moved to new owners.
+    </p>
+    <p>
+      We strongly suggest that you:
+      <ul>
+        <li>Visit the repository to ensure you are comfortable with its status.</li>
+        <li>Use GitHub's repository watch feature to be notified of any changes.</li>
+        <li>Consider referencing the package in its repository, and not rely on this index.</li>
+      </ul>
+    </p>
+    <h1>Existing packages</h1>
     <p>
         <ul>
             <li>go get go.mozilla.org/<a href="/autograph">autograph</a></li>
@@ -31,6 +44,6 @@
         </ul>
     </p>
     <br /><br />
-    <p>To add projects, head over to <a href="https://github.com/mozilla-services/gomoz" />https://github.com/mozilla-services/gomoz.</p>
+    <p>To report problems, please <a href="https://github.com/mozilla-services/gomoz/issues">file an issue</a>.</p>
   </body>
 </html>
